Resolves tdf#142041 - Hyperlink to file location

Follow-up fix to 334838efc12cd1e4a451a8dd7542b93fdaf30bb9

Change-Id: Ic63edcc88401d3db8f3a7737f562deb328485fab